src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  @apply font-sans font-light text-base;

  -webkit-font-smoothing: antialiased;
}

html.comic-sans,
html.comic-sans body {
  font-family: 'Comic Sans MS', 'Comic Sans', cursive, sans-serif !important;
}

p {
  @apply mb-5 text-lg;
}

p:last-of-type {
  @apply mb-0;
}

li {
  @apply mb-2;
}

li:before {
  content: '•';
  display: inline-block;
  margin-left: -1em;
  width: 1em;
}

/* Table styling from Ghost */
table {
  @apply inline-block mt-6 mb-12 max-w-full;

  margin-left: auto;
  margin-right: auto;
  width: auto;
  border-spacing: 0;
  border-collapse: collapse;
  white-space: nowrap;
  vertical-align: top;
  -webkit-overflow-scrolling: touch;
  background-attachment: scroll, scroll;
  background-size: 10px 100%, 10px 100%;
  background-repeat: no-repeat;
}

table th,
table td {
  @apply px-3 py-2;

  border: 1px solid #e3ecf3;
}

.list-no-dots:before {
  display: none;
}

.max-w-inherit {
  max-width: inherit;
}

/* Grid */
.grid-columns-1fr {
  grid-template-columns: 20px 1fr 20px;
}

@responsive {
  .grid-columns-1024 {
    grid-template-columns: 1fr 1024px 1fr;
  }
}

.grid-columns-iteam {
  grid-template-columns: 20px 1fr minmax(100px, 1024px) 1fr 20px;
}

.grid-columns-4-fluid {
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
}

.grid-column-2 {
  grid-column: 2/3;
}

.grid-columns-iteam > * {
  grid-column: 3/4;
}

.col-bleed {
  grid-column: -1 / 1;
}

/* Justify */
.justify-self-start {
  justify-self: start;
}

.justify-self-end {
  justify-self: end;
}

.justify-self-center {
  justify-self: center;
}

/* Markdown */
.markdown ul {
  @apply pl-5;
}

.markdown li {
  @apply text-lg;
}

.markdown a {
  @apply border-b-2 border-solid border-current text-lg text-cornflower-blue;
}

.markdown h2 {
  @apply text-2xl font-medium pb-4 min-w-full;
}

.markdown p,
.markdown ul {
  @apply min-w-full;
}

.markdown p:not(:last-of-type) {
  @apply mb-5;
}

.markdown b,
.markdown strong {
  font-weight: bold;
}

.markdown figure {
  @apply mt-8 mb-12;
}

/* Blockquoute */
blockquote {
  position: relative;
}

blockquote:before {
  background-image: url('./images/quote.png');
  background-repeat: no-repeat;
  background-size: 100%;
  bottom: calc(100% + 16px);
  content: ' ';
  filter: invert(1);
  height: 33px;
  left: 0;
  position: absolute;
  width: 44px;
}

